# pandoc-tex-sample

./: LICENSE  README.md  pandoc-tex.cabal  stack.yaml
analysis/: grammar.txt
src/: BasicLatex.hs  LatexCmds.hs  LatexSimpleDoc.hs  Lib.hs
test/: Main.hs  Samples.hs
