cabal-version:       2.2
name:                pandoc-tex
version:             0.1.0.3
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pandoc-tex#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                       , parsec >= 3.1
                       , pandoc-types >= 1.17
  ghc-options:       -Wmissing-import-lists
    
library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       LatexSimpleDoc, LatexCmds, BasicLatex
  build-depends:       fin >= 0.1.1
                       , vec >= 0.3
                       

test-suite hspec
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Samples 
  build-depends:       pandoc-tex
                       , raw-strings-qq
                       , hspec
  

